<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudScreenVIPVideo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- 收藏 -->
    <string name="collect_title">收藏</string>
    <string name="collect_title_video">VIP影片</string>
    <string name="collect_title_bluelight">影片</string>
    <string name="collect_time">收藏时间</string>
    <string name="total_film">总共%s部影片</string>
    <string name="no_collection_of_records">暂无收藏记录</string>
    <string name="no_result_view">空</string>
    <string name="no_record">没有记录</string>
    <string name="collect_activity_all_data_deleted">您已经删掉了全部内容</string>

    <!-- 历史 -->
    <string name="history_record_total">观看至第%s集</string>
    <string name="history_record_total_phase">观看至%s期</string>
    <string name="history_record">历史记录</string>
    <string name="total_day_record">总共%s天记录</string>
    <string name="record_item_film">影\u3000片</string>
    <string name="no_history_record">暂无历史记录</string>
    <string name="record_item_app_games">应用游戏</string>
    <string name="recordactivity_app_starterror">启动失败，可能已被卸载！</string>
    <string name="record_header_history">历史</string>

    <!-- 删除提示 -->
    <string name="delete_window_tip">您确认要删除全部收藏记录吗？</string>
    <string name="delete_window_tip_history">您确认要删除全部历史记录吗？</string>
    <string name="select_delete">选择删除</string>
    <string name="all_delete">全部删除</string>
    <string name="delete_window_ok">确\u3000定</string>
    <string name="delete_window_cancel">取\u3000消</string>

    <!-- 集数/期数 -->
    <string name="current_page">第%1$s页&#047;共%2$s页</string>
    <string name="total_set">共%s部</string>
    <string name="all">全部</string>
    <string name="film_0">0部影片</string>
    <string name="first_set">第%s集</string>
    <string name="all_videoset">全集</string>
    <string name="all_film">共%s部影片</string>
    <string name="all_episode">全%s集</string>
    <string name="update_expect">更新至%s期</string>
    <string name="update_videoset">更新至%s集</string>
    <string name="cloud_singel_toptxt">共1000集</string>
    <string name="collect_complete_works">全集完</string>
    <string name="collect_always_put"> 总集数: </string>

    <!-- popwindow菜单 -->
    <string name="menu_title">菜 单</string>
    <string name="category_filter">分类筛选</string>
    <string name="my_collect">我的收藏</string>
    <string name="search_title">搜 索</string>
    <string name="history_title">历史</string>
    <string name="person_title">用户中心</string>
    <string name="setting_title">设 置</string>

    <!-- 异常提示 -->
    <string name="data_not_completed">路上有点堵，内容正在赶来...</string>
    <string name="channel_no_category">此频道没有分类</string>
    <string name="collect_abnormal_data_collection">收藏记录出错啦，建议重启盒子试试</string>
    <string name="data_error">内容走丢了，请重试</string>
    <string name="package_data_error">此计费包有毒，请勿购买</string>
    <string name="video_data_error">影片已下线，请选择其他影片观看</string>
    <string name="server_no_data"></string>
    <string name="album_detail_data_null">影片已下线！</string>
    <string name="album_detail_data_parse_error">内容走丢了，请重试</string>
    <string name="album_detail_data_net_error">内容走丢了，请重试（%s）</string>
    <string name="load_data_failed_please_try_again">内容走丢了，请重试</string>
    <string name="data_fault">内容走丢了，请重试</string>
    <!--当专题内容数量少于5或者数据异常时吐司 NEW ADD-->
    <string name="subject_data_error">专题还没准备好，先看看其他的吧</string>
    <string name="subject_detail_data_error">影片还没准备好，先看看其他的吧</string>
    <!--当点击开通会员时发现用户已经是会员时吐司 NEW ADD-->
    <string name="becomevip_and_already_vip">您已经是会员啦！</string>
    <!--开通会员从服务器获取订单由于缺少必要数据失败时吐司 NEW ADD-->
    <string name="get_order_error">购买异常火爆，购买信息加载失败，请重试</string>
    <!--NEW ADD-->
    <string name="pay_success">支付成功</string>
    <!--NEW ADD-->
    <string name="pay_fail">支付失败</string>
    <!--开通会员从服务器获取订单接口或返回数据异常导致失败时吐司 NEW ADD-->
    <string name="get_order_error_from_net">抱歉，没有拿到您的订单号</string>
    <!--开通会员获取订单信息有误时吐司 NEW ADD-->
    <string name="get_order_data_error_from_net">服务器出小差啦，请您稍后支付</string>
    <!--当详情页相关推荐缺少数据时提示 NEW ADD-->
    <string name="relate_recommend_data_error">内容走丢了，请重试</string>
    <!--免费领取活动领取成功吐司 NEW ADD-->
    <string name="get_vip_free_success">领取成功！！！</string>
    <!--免费领取活动领取失败吐司 NEW ADD-->
    <string name="get_vip_free_fail">领取失败！！！</string>
    <!--免费领取活动,重复领取vip免费体验包失败吐司 NEW ADD-->
    <string name="get_vip_free_error_tip">您已领取过此优惠，不能领取更多了。</string>
    <!--免费领取活动点击确定时吐司 NEW ADD-->
    <string name="getting_vip_free">正在领取，请稍后</string>
    <!--登录时如果找不到用户中心程序时吐司 NEW ADD-->
    <string name="user_app_not_exist">没找到用户数据，建议重启或恢复出厂设置</string>
    <!--当某部片源所有码流都下线时吐司，正常情况这种数据不应该出现在接口中 NEW ADD-->
    <string name="stream_is_null">目前没有该节目的码流可以播放</string>
    <string name="launcher_exit_tip">再按一次我就离开你了</string>
    <!--免费领取活动（二维码活动）点击完成，刷新用户中心对比用户的信息，不满足领取条件时的吐司-->
    <string name="get_vip_free_not_satisfy">未满足领取条件，无法领取免费大麦影视尊享包</string>
    <string name="tip_no_channel_data">频道信息获取失败！</string>

    <!-- 引用 -->
    <string name="arrow">箭头</string>
    <string name="blur_bg">模糊背景</string>
    <string name="list">列表</string>
    <string name="cover">封面</string>

    <!-- 专题 -->
    <string name="subject_list_header_special">专题</string>
    <string name="subject_textinfo_special">专题</string>
    <string name="total_special">总共%s个专题</string>


    <!-- 导演、演员等 -->
    <string name="actor">主演：</string>
    <string name="subject_textinfo_director">导演：</string>
    <string name="subject_textinfo_actor">演员：</string>
    <string name="subject_textinfo_label">类型：</string>

    <!-- 标题显示 -->
    <string name="cloud_singel_lefttxt">今日推荐</string>
    <string name="cloud_single_bottomtxt">频道分类</string>
    <string name="film_detail">影片详情</string>
    <string name="cloud_single_subject_title">专题</string>
    <string name="film_detail_recommand_title">相关推荐</string>

    <!-- 电影列表 -->
    <string name="notice_filte_film">根据条件筛选影片</string>

    <!-- view显示 -->
    <string name="view_film_details">按 % 键查看详情</string>
    <string name="view_film_recommend">推荐</string>
    <string name="view_details">详情信息</string>
    <string name="view_related_recommendation">相关推荐</string>
    <string name="view_press">　按左键　</string>
    <string name="view_flip">　详情信息　|　按右键　</string>
    <string name="view_select"> 键选择　|　按　</string>
    <string name="view_recommentation">　相关推荐</string>
    <string name="view_save">　保存</string>
    <string name="jiantou">箭头</string>
    <string name="detail_cover">详情海报</string>

    <string name="film_detail_4play">大麦极清</string>
    <string name="film_detail_play">观看影片</string>
    <string name="film_detail_trySee">试 看</string>
    <string name="film_detail_play_vip">会员播放</string>
    <string name="film_detail_collect">收 藏</string>
    <string name="film_detail_collecting">已收藏</string>
    <string name="film_detail_select_episode">选 集</string>
    <string name="film_action_vip">开 通 会 员</string>

    <string name="every_year">每年</string>
    <string name="year">年</string>
    <string name="every_month">每月</string>
    <string name="month">月</string>
    <string name="every_day">每天</string>
    <string name="day">天</string>
    <string name="every_quarter">每季</string>
    <string name="half_year">半年</string>
    <string name="unlimiter">不限</string>


    <!--Launcher-->
    <string name="dialog_login_tip">请登录查看您的会员状态</string>
    <string name="dialog_login_ok">立即登录</string>
    <string name="dialog_login_cancel">稍后登录</string>
    <string name="dialog_free_vip_ok">立即领取</string>
    <string name="dialog_free_vip_cancel">稍后领取</string>
    <string name="dialog_renew_tip">您的影视尊享特权即将到期，是否续费？</string>
    <string name="dialog_renew_ok">续费</string>
    <string name="dialog_renew_cancel">取消</string>
    <string name="dialog_login_tip_has_free">请先登录</string>

    <!--Detail-->
    <string name="dialog_vip_log_statue">此内容为会员专享，请登录查看会员状态</string>
    <string name="dialog_opening_vip">此内容为会员专享，购买会员尽享极清体验。如已购买该片请到“我的影集”中观看。</string>
    <string name="dialog_open_vip">立即开通</string>
    <string name="dialog_wait_open">暂不开通</string>
    <string name="dialog_login_vip_film">此内容为会员专享，请登录查看会员状态</string>
    <string name="dialog_open_vip_film">此内容为会员专享，购买会员尽享极清体验。如已购买该片请到“我的影集”中观看。</string>
    <string name="dialog_activity_login">请登录查看您的VIP状态</string>
    <string name="dialog_video_stream_openvip">当前影片只有会员专享的清晰度，请开通会员后观看</string>
    <string name="dialog_video_stream_login">当前影片只有会员专享的清晰度,请登录查看会员状态</string>

    <!--xml-->
    <string name="buy_damai_vip">购买大麦影视尊享包</string>
    <string name="vip_privilege">会员特权</string>
    <string name="activity_film_list_search">搜索</string>
    <string name="activity_video_launcher_place1_title">今日会员精选</string>
    <string name="activty_video_launcher_place1_btn">详细信息</string>
    <string name="header_view_login">登 录</string>
    <string name="header_view_become_vip">开通会员</string>
    <string name="header_view_myfilm">我的影集</string>
    <string name="damai_vip_privilege">影视尊享特权</string>
    <string name="view_dialog_vip_ok">确定</string>
    <string name="view_dialog_vip_cancel">取消</string>
    <string name="view_dialog_vip_warn_tip">温馨提示：由于您的网络不是长城宽带或宽带通，因此播放高清晰度的视频时会卡顿，影响您的观影体验</string>
    <string name="view_dialog_vip_warn_ok">任性开通</string>
    <string name="view_dialog_vip_warn_cancel">暂不开通</string>
    <string name="header_view_crash">抢</string>
    <string name="header_view_broadcast">土豪冯够买大麦会员VIP一年包，分享优惠卷快来抢呀，抢了也没用，更何况不让你抢~~</string>
    <string name="data_exception">影片信息神秘丢失，无法播放</string>
    <string name="get_free_later">您已经领取本次活动了，我们正在处理请稍等下~</string>
    <string name="phone_error">未成功绑定手机号，请重试</string>
    <string name="vip_goods_exception">目前产品包出现问题，暂时购买不了，请购买其他包.....</string>
    <string name="vip_pay_exception">支付控件缺失，建议恢复出厂试试"</string>

</resources>
